시작화면(임시), gotoxy함수 사용

--- a/Movie/Movie/Movie.vcxproj
+++ b/Movie/Movie/Movie.vcxproj
@@ -125,7 +125,9 @@
     <ClCompile Include="play.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="view.cpp" />
+    <ClCompile Include="view.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h" />
