영화관 선택 화면 전체적인 틀 잡기, cmd화면 전환

--- a/Movie/Movie/Movie.vcxproj.filters
+++ b/Movie/Movie/Movie.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClCompile Include="play.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="view.cpp">
+    <ClCompile Include="movie_theater.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
