--- a/Movie/Movie/Movie.vcxproj
+++ b/Movie/Movie/Movie.vcxproj
@@ -125,7 +125,7 @@
     <ClCompile Include="play.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="view.cpp">
+    <ClCompile Include="movie_theater.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</ExcludedFromBuild>
     </ClCompile>
   </ItemGroup>
