--- a/Movie/Movie/Movie.vcxproj.filters
+++ b/Movie/Movie/Movie.vcxproj.filters
@@ -21,15 +21,24 @@
     <ClCompile Include="intro.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="play.cpp">
+    <ClCompile Include="member.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="movie_theater.cpp">
+    <ClCompile Include="movie.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="view.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="main.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="member.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="movie.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
